# aocl

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/aocl/: Cargo.toml  README.md
crates/aocl-blas/: Cargo.toml  README.md
crates/aocl-blas-sys/: Cargo.toml  README.md  build.rs
crates/aocl-blas-sys/bindings/: bindings.rs
crates/aocl-blas-sys/src/: lib.rs
crates/aocl-blas-sys/wrapper/: blas.h
crates/aocl-blas/src/: lib.rs
crates/aocl-build/: Cargo.toml  README.md
crates/aocl-build/src/: lib.rs
crates/aocl-compression/: Cargo.toml  README.md
crates/aocl-compression-sys/: Cargo.toml  README.md  build.rs
crates/aocl-compression-sys/bindings/: bindings.rs
crates/aocl-compression-sys/src/: lib.rs
crates/aocl-compression/src/: lib.rs
crates/aocl-crypto/: Cargo.toml  README.md
crates/aocl-crypto-sys/: Cargo.toml  README.md  build.rs
crates/aocl-crypto-sys/bindings/: bindings.rs
crates/aocl-crypto-sys/src/: lib.rs
crates/aocl-crypto-sys/wrapper/: crypto.h
crates/aocl-crypto/src/: aead.rs  cipher.rs  digest.rs  drbg.rs  ec.rs  lib.rs  mac.rs  rsa.rs
crates/aocl-data-analytics/: Cargo.toml  README.md
crates/aocl-data-analytics-sys/: Cargo.toml  README.md  build.rs
crates/aocl-data-analytics-sys/bindings/: bindings.rs
crates/aocl-data-analytics-sys/src/: lib.rs
crates/aocl-data-analytics/src/: lib.rs
crates/aocl-error/: Cargo.toml  README.md
crates/aocl-error/src/: lib.rs
crates/aocl-fft/: Cargo.toml  README.md
crates/aocl-fft-sys/: Cargo.toml  README.md  build.rs
crates/aocl-fft-sys/bindings/: bindings.rs
crates/aocl-fft-sys/src/: lib.rs
crates/aocl-fft/src/: lib.rs
crates/aocl-lapack/: Cargo.toml  README.md
crates/aocl-lapack-sys/: Cargo.toml  README.md  build.rs
crates/aocl-lapack-sys/bindings/: bindings.rs
crates/aocl-lapack-sys/src/: lib.rs
crates/aocl-lapack-sys/wrapper/: lapack.h
crates/aocl-lapack/src/: lib.rs
crates/aocl-math/: Cargo.toml  README.md
crates/aocl-math-sys/: Cargo.toml  README.md  build.rs
crates/aocl-math-sys/bindings/: bindings.rs
crates/aocl-math-sys/src/: lib.rs
crates/aocl-math-sys/wrapper/: math.h
crates/aocl-math/src/: lib.rs
crates/aocl-rng/: Cargo.toml  README.md
crates/aocl-rng-sys/: Cargo.toml  README.md  build.rs
crates/aocl-rng-sys/bindings/: bindings.rs
crates/aocl-rng-sys/src/: lib.rs
crates/aocl-rng/src/: lib.rs
crates/aocl-scalapack/: Cargo.toml  README.md
crates/aocl-scalapack-sys/: Cargo.toml  README.md  build.rs
crates/aocl-scalapack-sys/src/: lib.rs
crates/aocl-scalapack/src/: lib.rs
crates/aocl-securerng/: Cargo.toml  README.md
crates/aocl-securerng-sys/: Cargo.toml  README.md  build.rs
crates/aocl-securerng-sys/bindings/: bindings.rs
crates/aocl-securerng-sys/src/: lib.rs
crates/aocl-securerng-sys/wrapper/: securerng.h
crates/aocl-securerng/src/: lib.rs
crates/aocl-sparse/: Cargo.toml  README.md
crates/aocl-sparse-sys/: Cargo.toml  README.md  build.rs
crates/aocl-sparse-sys/bindings/: bindings.rs
crates/aocl-sparse-sys/src/: lib.rs
crates/aocl-sparse/src/: complex.rs  lib.rs
crates/aocl-sys/: Cargo.toml  README.md  build.rs
crates/aocl-sys/src/: lib.rs
crates/aocl-sys/wrapper/: compression.h  data_analytics.h  fftw.h  libflame.h  libm.h  rng.h  sparse.h
crates/aocl-types/: Cargo.toml  README.md
crates/aocl-types/src/: lib.rs
crates/aocl-utils/: Cargo.toml  README.md
crates/aocl-utils-sys/: Cargo.toml  README.md  build.rs
crates/aocl-utils-sys/bindings/: bindings.rs
crates/aocl-utils-sys/src/: lib.rs
crates/aocl-utils-sys/wrapper/: utils.h
crates/aocl-utils/src/: cpuid.rs  lib.rs  threads.rs  version.rs
crates/aocl/src/: blas.rs  compression.rs  crypto.rs  data_analytics.rs  error.rs  fft.rs  lapack.rs  lib.rs  math.rs  rng.rs  securerng.rs  sparse.rs
crates/aocl/src/crypto/: digest.rs
crates/aocl/src/utils/: cpuid.rs  mod.rs
scripts/: publish-remaining.sh
