[package]
name = "aocl-blas-sys"
description = "Unsafe FFI bindings to AOCL-BLAS (BLIS)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"
links = "amd-blis"
categories = ["external-ffi-bindings", "science", "mathematics"]
keywords = ["aocl", "amd", "blas", "blis", "ffi"]

[features]
default = []
ilp64 = []
static-link = []

[dependencies]
libc.workspace = true

[build-dependencies]
aocl-build = { version = "0.1", path = "../aocl-build" }
