[package]
name = "aocl-data-analytics-sys"
description = "Unsafe FFI bindings to AOCL-DA (Data Analytics)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"
links = "amd-da"
categories = ["external-ffi-bindings", "science"]
keywords = ["aocl", "amd", "machine-learning", "statistics", "ffi"]

[features]
default = []
ilp64 = []
static-link = []

[dependencies]
libc.workspace = true

[build-dependencies]
aocl-build = { version = "0.1", path = "../aocl-build" }

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
