[package]
name = "aocl-fft-sys"
description = "Unsafe FFI bindings to AOCL-FFTW"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"
links = "amd-fftw"
categories = ["external-ffi-bindings", "science", "mathematics"]
keywords = ["aocl", "amd", "fft", "fftw", "ffi"]

[features]
default = []
static-link = []

[dependencies]
libc.workspace = true

[build-dependencies]
aocl-build = { version = "0.1", path = "../aocl-build" }
