[package]
name = "aocl-lapack-sys"
description = "Unsafe FFI bindings to AOCL-LAPACK (libFLAME)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"
links = "amd-libflame"
categories = ["external-ffi-bindings", "science", "mathematics"]
keywords = ["aocl", "amd", "lapack", "libflame", "ffi"]

[features]
default = []
ilp64 = []
static-link = []

[dependencies]
libc.workspace = true

[build-dependencies]
aocl-build = { version = "0.1", path = "../aocl-build" }

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
