[package]
name = "aocl-rng-sys"
description = "Unsafe FFI bindings to AOCL-RNG"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"
links = "amd-rng"
categories = ["external-ffi-bindings", "science"]
keywords = ["aocl", "amd", "rng", "random", "ffi"]

[features]
default = []
ilp64 = []
static-link = []

[dependencies]
libc.workspace = true

[build-dependencies]
aocl-build = { version = "0.1", path = "../aocl-build" }
