[package]
name = "aocl-securerng"
description = "Safe Rust wrappers for AOCL-SecureRNG (RDRAND/RDSEED)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
categories = ["api-bindings", "cryptography"]
keywords = ["aocl", "amd", "rdrand", "rdseed"]

[dependencies]
aocl-securerng-sys = { version = "0.1", path = "../aocl-securerng-sys" }
aocl-error = { version = "0.1", path = "../aocl-error" }

[features]
default = []
static-link = ["aocl-securerng-sys/static-link"]
