[package]
name = "aocl-sparse"
description = "Safe Rust wrappers for AOCL-Sparse (sparse BLAS)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
categories = ["api-bindings", "mathematics", "science"]
keywords = ["aocl", "amd", "sparse", "csr"]

[dependencies]
aocl-sparse-sys = { version = "0.1", path = "../aocl-sparse-sys" }
aocl-error = { version = "0.1", path = "../aocl-error" }
aocl-types = { version = "0.1", path = "../aocl-types" }

[features]
default = []
ilp64 = ["aocl-sparse-sys/ilp64"]
static-link = ["aocl-sparse-sys/static-link"]
