[package]
name = "aocl-sys"
description = "Umbrella crate re-exporting the per-component aocl-*-sys FFI bindings under cargo features"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
categories = ["external-ffi-bindings", "science", "mathematics"]
keywords = ["aocl", "amd", "ffi"]

[features]
default = ["utils"]

# One feature per AOCL component. Each enables the corresponding
# aocl-*-sys crate, which is otherwise an optional dependency and not
# pulled into the build tree.
blas = ["dep:aocl-blas-sys"]
lapack = ["dep:aocl-lapack-sys"]
fft = ["dep:aocl-fft-sys"]
math = ["dep:aocl-math-sys"]
sparse = ["dep:aocl-sparse-sys"]
rng = ["dep:aocl-rng-sys"]
securerng = ["dep:aocl-securerng-sys"]
utils = ["dep:aocl-utils-sys"]
compression = ["dep:aocl-compression-sys"]
crypto = ["dep:aocl-crypto-sys"]
data-analytics = ["dep:aocl-data-analytics-sys"]
scalapack = ["dep:aocl-scalapack-sys"]

# Build-mode features forward to whichever component crates are enabled.
ilp64 = [
    "aocl-blas-sys?/ilp64",
    "aocl-lapack-sys?/ilp64",
    "aocl-sparse-sys?/ilp64",
    "aocl-rng-sys?/ilp64",
    "aocl-data-analytics-sys?/ilp64",
    "aocl-scalapack-sys?/ilp64",
]
static-link = [
    "aocl-blas-sys?/static-link",
    "aocl-lapack-sys?/static-link",
    "aocl-fft-sys?/static-link",
    "aocl-math-sys?/static-link",
    "aocl-sparse-sys?/static-link",
    "aocl-rng-sys?/static-link",
    "aocl-securerng-sys?/static-link",
    "aocl-utils-sys?/static-link",
    "aocl-compression-sys?/static-link",
    "aocl-crypto-sys?/static-link",
    "aocl-data-analytics-sys?/static-link",
    "aocl-scalapack-sys?/static-link",
]

[dependencies]
aocl-blas-sys           = { version = "0.1", path = "../aocl-blas-sys",           optional = true }
aocl-lapack-sys         = { version = "0.1", path = "../aocl-lapack-sys",         optional = true }
aocl-fft-sys            = { version = "0.1", path = "../aocl-fft-sys",            optional = true }
aocl-math-sys           = { version = "0.1", path = "../aocl-math-sys",           optional = true }
aocl-sparse-sys         = { version = "0.1", path = "../aocl-sparse-sys",         optional = true }
aocl-rng-sys            = { version = "0.1", path = "../aocl-rng-sys",            optional = true }
aocl-securerng-sys      = { version = "0.1", path = "../aocl-securerng-sys",      optional = true }
aocl-utils-sys          = { version = "0.1", path = "../aocl-utils-sys",          optional = true }
aocl-compression-sys    = { version = "0.1", path = "../aocl-compression-sys",    optional = true }
aocl-crypto-sys         = { version = "0.1", path = "../aocl-crypto-sys",         optional = true }
aocl-data-analytics-sys = { version = "0.1", path = "../aocl-data-analytics-sys", optional = true }
aocl-scalapack-sys      = { version = "0.1", path = "../aocl-scalapack-sys",      optional = true }
