[package]
name = "aocl-utils"
description = "Safe Rust wrappers for AOCL-Utils (CPU identification, threading helpers)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
categories = ["api-bindings", "hardware-support"]
keywords = ["aocl", "amd", "cpuid"]

[dependencies]
aocl-utils-sys = { version = "0.1", path = "../aocl-utils-sys" }
aocl-error = { version = "0.1", path = "../aocl-error" }

[features]
default = []
static-link = ["aocl-utils-sys/static-link"]
